# Engineering-Brain

./: .env.example  .gitignore  FINAL_SUMMARY.md  IMPLEMENTATION_REPORT.md  PHASE_4_COMPLETE.md  PHASE_4_SETUP.md  QUICK_REFERENCE.md  README.md  SESSION_SUMMARY.md  docker-compose.prod.yml  package-lock.json  package.json
apps/api/: pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/agents/: code_review_agent.py
apps/api/app/api/: routes.py  routes_github.py  routes_public.py
apps/api/app/core/: config.py  observability.py
apps/api/app/db/: init.sql  migrations.py  persistent_store.py
apps/api/app/graph/: __init__.py  extractor.py
apps/api/app/integrations/: github_auth.py
apps/api/app/llm/: __init__.py  ollama_adapter.py
apps/api/app/models/: __init__.py  schemas.py
apps/api/app/retrieval/: __init__.py  chunker.py  embedder.py  ranking.py
apps/api/app/services/: analysis_service.py  architecture_service.py  cache_service.py  chat_service.py  github_service.py  index_store.py  job_queue.py  repository_loader.py  repository_service.py  search_service.py
apps/api/tests/: test_chunker.py  test_comprehensive.py  test_repository_flow.py  test_repository_loader.py
apps/api/tests/fixtures/demo-repo/: README.md  main.py
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
docs/: Engineering-Brain-Startup-Blueprint.docx  Engineering-Brain-Startup-Blueprint.html  Engineering-Brain-Startup-Blueprint.md  phase-1-plan.md
infra/: docker-compose.yml  prometheus.yml
scripts/: md_to_docx.js
