[project]
name = "engineering-brain-api"
version = "0.1.0"
description = "FastAPI backend for Engineering Brain"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  ".engineering-brain",
  "pytest-cache-files-*",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
  ".engineering-brain",
  ".pytest_cache",
  "__pycache__",
  "pytest-cache-files-*",
]
addopts = "-p no:cacheprovider"
